@@ -207,6 +207,9 @@
     <Content Include="Content\UI\DirectionsScreen.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\UI\engage.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\UI\GameOverScreen.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
